@@ -13,6 +13,7 @@ version 0.5.6:
   - NE2K PCI support
   - dummy VGA PCI support
   - VGA font selection fix (Daniel Serpell)
+  - PIC reset fix (Hidemi KAWAI)
 
 version 0.5.5:
 
